[package]
name = "lemmy-lite"
version = "0.3.0"
authors = ["Iron Oxidizer"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
serde = { version = "1.0", default-features = false }
url = { version = "2.1", default-features = false }
actix-web = { version = "3.1", default-features = false }
actix-files = { version = "0.4", default-features = false }
maud = { git = "https://github.com/lambda-fairy/maud", default-features = false, features = ["actix-web"] }
pulldown-cmark = { version = "0.8", default-features = false }
