[package]
name = "lemmy-lite"
version = "0.2.2"
authors = ["Iron Oxidizer"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
serde = { version = "1.0", default-features = false }
url = { version = "2.1", default-features = false }
actix-web = { version = "3.0", default-features = false, features = ["rustls"] }
maud = { version = "0.22", default-features = false }
pulldown-cmark = { version = "0.8", default-features = false }
serde_json = "1.0.102"
lemmy_api_common = "0.18.2"
actix-files = "0.4.1"
awc = "2.0.3"
